templates/kamaji_template.yaml
---
# Source: kamaji/templates/etcd_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/components: etcd
  name: etcd
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 2379
      name: client
    - port: 2380
      name: peer
  selector:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: etcd
---
# Source: kamaji/templates/service_metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kamaji-0.15.3
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: metrics
    app.kubernetes.io/version: "v0.5.1"
    app.kubernetes.io/managed-by: Helm
  name: release-name-kamaji-metrics-service
  namespace: default
spec:
  ports:
    - port: 8080
      name: metrics
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller-manager
---
# Source: kamaji/templates/service_webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kamaji-0.15.3
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/component: webhook
    app.kubernetes.io/version: "v0.5.1"
    app.kubernetes.io/managed-by: Helm
  name: release-name-kamaji-webhook-service
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      name: webhook-server
      targetPort: webhook-server
  selector:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller-manager
---
# Source: kamaji/templates/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kamaji
  labels:
    helm.sh/chart: kamaji-0.15.3
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/version: "v0.5.1"
    app.kubernetes.io/managed-by: Helm
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kamaji
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: controller-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kamaji
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: controller-manager
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kamaji-controller-manager
      containers:
      - args:
        - manager
        - --health-probe-bind-address=:8081
        - --leader-elect
        - --metrics-bind-address=:8080
        - --tmp-directory=/tmp/kamaji
        - --datastore=default
        command:
        - /kamaji
        image: "clastix/kamaji:v0.5.1"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthcheck
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 8081
          name: healthcheck
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthcheck
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 20Mi
        securityContext:
            allowPrivilegeEscalation: false
        volumeMounts:
          - mountPath: /tmp
            name: tmp
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cert
          secret:
            defaultMode: 420
            secretName: release-name-kamaji-webhook-server-cert
---
# Source: kamaji/templates/etcd_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/components: etcd
  name: etcd
  namespace: default
spec:
  serviceName: etcd
  selector:
    matchLabels:
      app.kubernetes.io/name: kamaji
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: etcd
  replicas: 3
  template:
    metadata:
      name: etcd
      labels:
        app.kubernetes.io/name: kamaji
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: etcd
    spec:
      volumes:
        - name: certs
          secret:
            secretName: etcd-certs
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2379
              name: client
            - containerPort: 2380
              name: peer
          volumeMounts:
            - name: data
              mountPath: /var/run/etcd
            - name: certs
              mountPath: /etc/etcd/pki
          command:
            - etcd
            - --data-dir=/var/run/etcd
            - --name=$(POD_NAME)
            - --initial-cluster-state=new
            - --initial-cluster=etcd-0=https://etcd-0.etcd.default.svc.cluster.local:2380,etcd-1=https://etcd-1.etcd.default.svc.cluster.local:2380,etcd-2=https://etcd-2.etcd.default.svc.cluster.local:2380
            - --initial-advertise-peer-urls=https://$(POD_NAME).etcd.$(POD_NAMESPACE).svc.cluster.local:2380
            - --advertise-client-urls=https://$(POD_NAME).etcd.$(POD_NAMESPACE).svc.cluster.local:2379
            - --initial-cluster-token=kamaji
            - --listen-client-urls=https://0.0.0.0:2379
            - --listen-metrics-urls=http://0.0.0.0:2381
            - --listen-peer-urls=https://0.0.0.0:2380
            - --client-cert-auth=true
            - --peer-client-cert-auth=true
            - --trusted-ca-file=/etc/etcd/pki/ca.crt
            - --cert-file=/etc/etcd/pki/server.pem
            - --key-file=/etc/etcd/pki/server-key.pem
            - --peer-trusted-ca-file=/etc/etcd/pki/ca.crt
            - --peer-cert-file=/etc/etcd/pki/peer.pem
            - --peer-key-file=/etc/etcd/pki/peer-key.pem
            - --auto-compaction-mode=periodic
            - --auto-compaction-retention=5m
            - --snapshot-count=10000
            - --quota-backend-bytes=8589934592
            - --v=8
          livenessProbe:
            failureThreshold: 8
            httpGet:
              path: /health?serializable=true
              port: 2381
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: 
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 10Gi
---
# Source: kamaji/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-kamaji-serving-cert
  labels:
    helm.sh/chart: kamaji-0.15.3
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: mutating-webhook-configuration
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/version: "v0.5.1"
    app.kubernetes.io/managed-by: Helm
  name: kamaji-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kamaji-webhook-service
        namespace: default
        path: /mutate-kamaji-clastix-io-v1alpha1-tenantcontrolplane
    failurePolicy: Fail
    name: mtenantcontrolplane.kb.io
    rules:
      - apiGroups:
          - kamaji.clastix.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - tenantcontrolplanes
    sideEffects: None
---
# Source: kamaji/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-kamaji-serving-cert
  labels:
    helm.sh/chart: kamaji-0.15.3
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: validating-webhook-configuration
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/version: "v0.5.1"
    app.kubernetes.io/managed-by: Helm
  name: kamaji-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kamaji-webhook-service
        namespace: default
        path: /validate--v1-secret
    failurePolicy: Ignore
    name: vdatastoresecrets.kb.io
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - secrets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kamaji-webhook-service
        namespace: default
        path: /validate-kamaji-clastix-io-v1alpha1-datastore
    failurePolicy: Fail
    name: vdatastore.kb.io
    rules:
      - apiGroups:
          - kamaji.clastix.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - datastores
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-kamaji-webhook-service
        namespace: default
        path: /validate-kamaji-clastix-io-v1alpha1-tenantcontrolplane
    failurePolicy: Fail
    name: vtenantcontrolplane.kb.io
    rules:
      - apiGroups:
          - kamaji.clastix.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - tenantcontrolplanes
    sideEffects: None
